<resources>
    <string name="app_name">Mbps/MiB download calculator</string>
    <string name="mbps">Mbps</string>
    <string name="mib">MiB</string>
    <string name="result">Result (in second)</string>
    <string name="mbps_hint">Enter Megabit/sec</string>
    <string name="mib_hint">Enter Mebibyte</string>
    <string name="default_Sec">0.0</string>
    <string name="default_Invalid">Cannot divide by 0</string>
    <string name="open_button">OPEN</string>
    <string name="close_button">CLOSE</string>

</resources>
