<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="mbpsmibviewmodel"
            type="com.example.mbpsdownloadcalculator.MbpsMibTimeViewModel" />

    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainFragment">

        <TextView
            android:id="@+id/label_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/result"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mibText" />

        <TextView
            android:id="@+id/label_mib"
            android:layout_width="67dp"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:text="@string/mib"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mbpsText" />

        <TextView
            android:id="@+id/label_mbps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/mbps"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/mibText"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:ems="10"
            android:hapticFeedbackEnabled="false"
            android:hint="@string/mib_hint"
            android:inputType="numberDecimal"
            android:maxLength="9"
            android:textAlignment="center"
            android:textStyle="bold|italic"
            android:onTextChanged="@{(s,start,before,count) -> mbpsmibviewmodel.onMib(s)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_mib" />


        <EditText
            android:id="@+id/mbpsText"

            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="@string/mbps_hint"
            android:inputType="numberDecimal"
            android:maxLength="9"
            android:textAlignment="center"
            android:textStyle="bold|italic"
            android:onTextChanged="@{(s,start,before,count) -> mbpsmibviewmodel.onMbps(s)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_mbps" />

        <TextView
            android:id="@+id/resultText"
            android:text="@{Double.toString(mbpsmibviewmodel.transferTime)}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textColor="?android:attr/colorAccent"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_result" />
    </android.support.constraint.ConstraintLayout>
</layout>
